# notificat

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
.devcontainer/: Dockerfile  devcontainer.json
components/espressif__esp_lvgl_port/include/: esp_lvgl_port.h
components/lvgl__lvgl/: lv_conf.h
components/lvgl__lvgl/env_support/cmake/: esp.cmake
main/: CMakeLists.txt  app_main.c  idf_component.yml  notificat.cpp
main/apps/alarm/: alarm.cpp  alarm_model.hpp  alarm_priv.hpp  alarm_view.cpp  alarm_view.hpp  img_alarm.cpp  notificat_img.cpp
main/apps/include/: alarm.hpp  weather.hpp
main/apps/test/: test.cpp
main/apps/weather/: notes.txt  weather.cpp  weather_img.cpp  weather_priv.hpp
main/apps/weather/icon/: img_cloudy.cpp  img_drizzle.cpp  img_foggy.cpp  img_partly_cloudy.cpp  img_rain.cpp  img_snow.cpp  img_sunny.cpp  img_thunderstorm.cpp
main/mylib/include/: singleton.hpp
main/system/app_mng/: app_mng.cpp  app_mng_priv.hpp  img_notificat.cpp  menu_img_press.cpp  menu_img_release.cpp
main/system/http/: http.cpp  http_priv.hpp
main/system/include/: app.hpp  app_mng.hpp  http.hpp  network.hpp  time_sync.hpp
main/system/network/: network.cpp  time_sync.cpp
